Changes for QuestionEditor

--- a/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/components/MultipleChoiceQuestionEditor.html
+++ b/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/components/MultipleChoiceQuestionEditor.html
@@ -1,4 +1,4 @@
-<textarea wicket:id="mcQuestionText" rows="10" cols="30">
+<!-- <textarea wicket:id="mcQuestionText" rows="10" cols="30">
 
 </textarea>
 <form wicket:id="mcAnswersForm">
@@ -6,4 +6,4 @@
 <input type="checkbox" name="answerCorrect" value="2"><input wicket:id="answer2"><br/>
 <input type="checkbox" name="answerCorrect" value="3"><input wicket:id="answer3"><br/>
 <input type="checkbox" name="answerCorrect" value="4"><input wicket:id="answer4"><br/>
-</form> 
+</form>  -->
