--- a/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/components/MultipleChoiceQuestionEditor.html
+++ b/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/components/MultipleChoiceQuestionEditor.html
@@ -1,9 +1,12 @@
-<!-- <textarea wicket:id="mcQuestionText" rows="10" cols="30">
-
-</textarea>
+<wicket:panel>
 <form wicket:id="mcAnswersForm">
-<input type="checkbox" name="answerCorrect" value="1"><input wicket:id="answer1"><br/>
-<input type="checkbox" name="answerCorrect" value="2"><input wicket:id="answer2"><br/>
-<input type="checkbox" name="answerCorrect" value="3"><input wicket:id="answer3"><br/>
-<input type="checkbox" name="answerCorrect" value="4"><input wicket:id="answer4"><br/>
-</form>  -->
+	<div wicket:id="feedbackPanel" ></div>
+	<textarea wicket:id="mcQuestionText" rows="10" cols="30">
+	
+	</textarea>
+	<input type="checkbox" wicket:id="cb1"><input wicket:id="answer1"><br/>
+	<input type="checkbox" wicket:id="cb2"><input wicket:id="answer2"><br/>
+	<input type="checkbox" wicket:id="cb3"><input wicket:id="answer3"><br/>
+	<input type="checkbox" wicket:id="cb4"><input wicket:id="answer4"><br/>
+</form>
+</wicket:panel> 
