--- a/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/components/MultipleChoiceQuestionEditor.html
+++ b/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/components/MultipleChoiceQuestionEditor.html
@@ -3,7 +3,7 @@
 	<div wicket:id="feedbackPanel" ></div>
 	<textarea wicket:id="mcQuestionText" rows="10" cols="30">
 	
-	</textarea>
+	</textarea><br/>
 	<input type="checkbox" wicket:id="cb1"><input wicket:id="answer1"><br/>
 	<input type="checkbox" wicket:id="cb2"><input wicket:id="answer2"><br/>
 	<input type="checkbox" wicket:id="cb3"><input wicket:id="answer3"><br/>
