Fixing MCQuestionEditor form

--- a/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/components/MultipleChoiceQuestionEditor.html
+++ b/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/components/MultipleChoiceQuestionEditor.html
@@ -4,10 +4,10 @@
 	<textarea wicket:id="mcQuestionText" rows="10" cols="30">
 	
 	</textarea><br/>
-	<input type="checkbox" wicket:id="cb1"><input wicket:id="answer1"><br/>
-	<input type="checkbox" wicket:id="cb2"><input wicket:id="answer2"><br/>
-	<input type="checkbox" wicket:id="cb3"><input wicket:id="answer3"><br/>
-	<input type="checkbox" wicket:id="cb4"><input wicket:id="answer4"><br/>
+	<input type="hidden" wicket:id="h1" /><input type="checkbox" wicket:id="cb1" /><input wicket:id="answer1"><br/>
+	<input type="hidden" wicket:id="h2" /><input type="checkbox" wicket:id="cb2" /><input wicket:id="answer2"><br/>
+	<input type="hidden" wicket:id="h3" /><input type="checkbox" wicket:id="cb3" /><input wicket:id="answer3"><br/>
+	<input type="hidden" wicket:id="h4" /><input type="checkbox" wicket:id="cb4" /><input wicket:id="answer4"><br/>
 	<input type="submit" value="Submit"/>
 </form>
 </wicket:panel> 
