Finishing multiple choice question editor

--- a/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/components/MultipleChoiceQuestionEditor.html
+++ b/pictures/pictures-webapp/src/main/java/com/lvl6/pictures/ui/admin/components/MultipleChoiceQuestionEditor.html
@@ -8,6 +8,7 @@
 	<input type="hidden" wicket:id="h2" /><input type="checkbox" wicket:id="cb2" /><input wicket:id="answer2"><br/>
 	<input type="hidden" wicket:id="h3" /><input type="checkbox" wicket:id="cb3" /><input wicket:id="answer3"><br/>
 	<input type="hidden" wicket:id="h4" /><input type="checkbox" wicket:id="cb4" /><input wicket:id="answer4"><br/>
+	<input type="hidden" wicket:id="isNew" />
 	<input type="submit" value="Submit"/>
 </form>
 </wicket:panel> 
